style.css
* {
    box-sizing: border-box;
    margin: 0; /*To fix that weird default margin around the body and other elements*/
    padding: 0;
    display: flow-root;
}

title {
    display: none; /*display:flow-root; above cause title show so changed removed the display*/
}

html {
    font-size: 62.5%;
}

header > nav > ul{
    float: right;
    width: 60%;
}

section > div{ /*For middle divisions*/
    text-align: center;
    padding: 1%;
    font-size: 3rem;
}

nav > ul > li{
    float: left;
    width: 10%;
    margin: 1%;
    text-align: center;
}

.centered > ul{
    text-align: center;
    margin: 10%;
}

.centered > ul > li{
    display:inline-block;
    padding-left: 1%;
    float: none;
    width: none;
    margin: none;
}

main > div > ul > li{ /*social media ul*/
    float: left;
    width: 10%;

}
.mainAndHeader {
    background-image: url("https://freefoodphotos.com/imagelibrary/vegetables/white_cauliflower.jpg");
}

section {
    background-image: url("https://freefoodphotos.com/imagelibrary/fruit/apple_on_white.jpg");
}

section + section {
    background-image: url("https://freefoodphotos.com/imagelibrary/vegetables/uncooked_mushrooms.jpg");
}

section + section + section{
    background-image: url("https://freefoodphotos.com/imagelibrary/vegetables/various_mushrooms.jpg");
}

footer {
    background-color: antiquewhite;
}

.mainShift {
    margin: 10%;
    display: inline-block;
    font-size: 2.25rem;
}

h1 {
    padding-right: 60%;
    padding-bottom: 1.5%;
    font-size: 7.5rem;
}


.headerUl {
    font-size: 1.5rem;
}

input {
    padding: 1%;
    width: 37.5%;
}

